docs(JVM): 垃圾收集器笔记